--- a/style.css
+++ b/style.css
@@ -441,70 +441,52 @@ h6 {
     text-align: center;
 }
 
-.content .contact .contactCards {
-    padding: 0;
-    margin: 0 auto;
+.content .contact .cards {
+    width: 80%;
 }
 
-.content .contact ul {
+.content .contact .cards ul {
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
     list-style: none;
 }
 
-.content .contact i {
-    background-color: rgb(221, 221, 221);
-    padding: 15px 15px;
-    border-radius: 100%;
-    transition: 0.3s;
+.content .contact .cards a {
+    text-decoration: none;
+    color: #232323;
+    margin: 20px 0;
+    background: red;
+    transition: .5s;
+    position: relative;
+    border-radius: 20px 0 0 20px;
+    background: #a8a8a8;
+    z-index: 2;
 }
 
-.content .contact li {
-    padding: 50px 10px;
-    width: 30%;
-    margin: 0 30px;
-    border-radius: 10px;
-    transition: 0.3s;
-    text-align: center;
+.content .contact .cards a:hover {
+    color: #929292 !important;
 }
 
-.content .contact li:hover {
+.content .contact .cards a::before {
+    content: '';
+    width: 1%;
+    height: 100%;
+    position: absolute;
     background: #232323;
-    color: #f5f5f5;
+    border-radius: 20px 0 0 20px;
+    transition: .8s;
+    z-index: -1;
 }
 
-.content .contact li:hover i {
-    background: #232323;
-    color: #fff;
+.content .contact .cards a:hover::before {
+    width: 100%;
 }
 
-@media screen and (max-width: 1024px) {
-    .content .contact ul {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        justify-content: space-around;
-        list-style: none;
-    }
-
-    .content .contactCards {
-        padding: 0;
-    }
-
-    .content .contact .sectionTitle::after {
-        display: none;
-    }
-
-    .content .contact li {
-        margin: 0 auto;
-        padding: 50px 0;
-        width: 90%;
-        border-radius: 10px;
-        transition: 0.3s;
-        text-align: center;
-    }
+.content .contact .cards li {
+    display: flex;
+    width: 100%;
+    align-items: center;
 }
-
 /* contact */
 
 /* copyright */
